plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.springframework.boot' version '3.3.5'
}

allprojects {
    targetCompatibility = 1.21
    sourceCompatibility = 1.21
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation(platform('org.junit:junit-bom:5.9.3'))
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
    testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
    implementation group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
    implementation group: 'javax.mail', name: 'mail', version: '1.4.7'
    implementation group: 'com.google.guava', name: 'guava', version: '28.2-jre'
    implementation group: 'commons-net', name: 'commons-net', version: '3.6'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude module: 'spring-boot-starter-tomcat'
    }
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-jetty'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

test {
    useJUnitPlatform()
}
